--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
                     </span>
 
                     </p>
-                    <span class="read-more-btn">Read More...</span>
+                    <span class="read-more-btn">Meer Details</span>
                 </article>
 
                 <% }) %>
