--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,10 @@ h1{
   margin-bottom: 60px;
 }
 
+h4{
+  font-weight: 600;
+}
+
 /* HEADER */
 .header-section{
     position: relative;
@@ -78,8 +82,11 @@ header ul li a{
 
 /* BOEKEN OVERZICHTS */
 article{
-  max-width: 160px;
-  padding: 10px;
+  width: 16em;
+  min-height: 20em;
+  position: relative;
+  padding: 25px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
 .boeken-foto{
@@ -91,7 +98,7 @@ article{
 .read-more-container{
   display: flex;
   flex-flow: row wrap;
-  gap: 1rem;
+  gap: 2rem;
   justify-content: center;
 }
 
@@ -105,6 +112,10 @@ article{
 
 .read-more-btn{
   color: #0984e3;
+  color: #32557f;
+  text-decoration: none;
+  border-bottom: 2px dashed #32557f;
+  padding-bottom: 3px;
 }
 
 .read-more-text{
