--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -22,10 +22,9 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </header>
-  <div>
-    <div>
+  <div class="sub-header">
       <h2>Het zijn niet gewonen Boeken<br>Het is <span>OBA</span></h2>
-    </div>
+    <img class="sub-header-foto" src="../../public/media/header-foto.gif">
   </div>
 </section>
 </head>
