--- a/public/style.css
+++ b/public/style.css
@@ -61,6 +61,12 @@ header ul{
     display: flex;
 }
 
+@media (max-width: 820px) {
+    header ul{
+      display: none;
+  }
+}
+
 header ul li {
     list-style: none;
 }
@@ -78,6 +84,23 @@ header ul li a{
     font-weight: 700;
     margin-left: 20px;
     text-decoration: none;
+}
+
+/* SUB-HEADER */
+@media (min-width: 820px) {
+  .sub-header {
+    display: contents;
+  }
+  .sub-header-foto {
+    margin-top: 0;
+  }
+}
+
+.sub-header-foto {
+  margin-top: 30px;
+  height: 200px;
+  width: 200px;
+  align-items: center;
 }
 
 /* BOEKEN OVERZICHTS */
