--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,28 @@ span{
   color: var(--red);
 }
 
+p{
+  margin-bottom: 10px;
+  margin-top: 5px;
+}
+.boek-schrijvers{
+  color: #454545;
+  font-size: .9231rem;
+  font-style: italic;
+  margin-bottom: 20px;
+  margin-top: 3px;
+}
+
+.btn{
+    display: block;
+    margin-top: 25px;
+    width: 100%;
+    background-color: var(--red);
+    color: white;
+    padding: 7px;
+    border: 1px;
+}
+
 section{
   padding-left: 80px;
   padding-right: 80px;
@@ -26,6 +48,23 @@ h1{
 
 h4{
   font-weight: 600;
+}
+
+/* SEARCHBAR */
+.search{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 80px;
+}
+
+.search-input{
+  padding: 10px;
+  width: 300px;
+}
+
+.search-btn{
+  padding: 10px;
+  margin-left: 8px;
 }
 
 /* HEADER */
@@ -54,6 +93,12 @@ header{
 header .logo{
     position: relative;
     max-width: 80px;
+}
+
+@media (min-width: 820px) {
+    header .logo{
+      max-width: 150px;
+  }
 }
 
 header ul{
