--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,10 @@
 
     <section>
         <h1>Alle Boeken</h1>
+        <div class="search">
+            <input class="search-input" type="text" placeholder="Search.." name="search">
+            <button class="search-btn" type="submit"><i class="fa fa-search"></i></button>
+            </div>
         <div class="read-more-container">
             <% results.forEach(result=> { %>
 
@@ -11,16 +15,28 @@
                     <h4>
                         <%= result.frabl.key1 %>
                     </h4>
-                    <p>
+                    <p class="boek-schrijvers">
                         <%= result.frabl.key2 %>
                     </p>
 
                     <span class="read-more-text">
-                        <button>hoi</button>
+                        <span>Info:</span>
+                        <p><%= result.summaries %></p>
+
+                        <span>Genre:</span>
+                        <p><%= result.genres %></p>
+
+                        <span>Taal:</span>
+                        <p><%= result.languages %></p>
+
+                        <span>Aantal pagina's:</span>
+                        <p><%= result.description[0] %></p>
+
                     </span>
 
                     </p>
                     <span class="read-more-btn">Meer Details</span>
+                    <button class="btn">Reserveer</button>
                 </article>
 
                 <% }) %>
