--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,10 +4,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
   <!-- CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/style.css" />
 
   <title>Document</title>
@@ -15,7 +13,7 @@
 <body>
 <section class="header-section">
   <header>
-    <a href="#"><img src="../../public/media/logo.jpeg" class="logo"></a>
+    <a href="#"><img src="../../media/logo.jpeg" class="logo"></a>
     <ul>
       <li><a href="#" class="active">Home</a></li>
       <li><a href="#">Wat is nieuw</a></li>
@@ -24,7 +22,7 @@
   </header>
   <div class="sub-header">
       <h2>Het zijn niet gewonen Boeken<br>Het is <span>OBA</span></h2>
-    <img class="sub-header-foto" src="../../public/media/header-foto.gif">
+    <img class="sub-header-foto" src="../../media/header-foto.gif">
   </div>
 </section>
 </head>
